# totp-authenticator

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SECURITY_PRIVACY.md  pyproject.toml
.agent/: rules.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/api/src/server/: auth.py  database.py  main.py  models.py
apps/api/tests/: test_api.py
apps/ui/: pyproject.toml
apps/ui/src/totp_authenticator/: api.py  app.py  core.py  parser.py  storage.py  sync_manager.py
apps/ui/tests/: test_backup.py  test_crypto.py  test_parser.py  test_storage.py
docs/: ROADMAP.md
src/totp_authenticator/: __init__.py  app.py  crypto.py  icon.py  main.py  storage.py
tests/: test_core.py  test_storage.py
