[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "totp-authenticator-api"
version = "0.1.0"
description = "Cloud Sync E2EE Server for TOTP Authenticator"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlalchemy>=2.0.29",
    "bcrypt>=4.0.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "pytest-asyncio>=0.23.0"
]
